--- a/main.css
+++ b/main.css
@@ -9,6 +9,11 @@ body {
 .nav-list {
     list-style: none;
     padding: 0;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    margin-left: 205px;
+    margin-right: 205px;
 }
 
 .search-bar {
